@@ -1,8 +1,16 @@
 intltool-*
 configure
 aclocal.m4
+config.guess
 config.log
 config.status
+config.sub
+depcomp
+install-sh
+libtool
+ltmain.sh
+missing
+mkinstalldirs
 autom4te.cache
 Makefile.in
 Makefile
